# PhiloLogic5

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  com.philologic5.gunicorn.plist  docker_apache_restart.sh  install.sh  philoload5  philologic5-gunicorn.service
.github/workflows/: pages.yml
app/: index.html  package-lock.json  package.json  vite.config.js
app/src/: App.vue  i18n.js  main.js  mixins.js  utils.js
app/tests/: AccessControl.test.js  Aggregation.test.js  Bibliography.test.js  BibliographyCriteria.test.js  Citations.test.js  Collocation.test.js  Concordance.test.js  ExportResults.test.js  Facets.test.js  Header.test.js  Kwic.test.js  LandingPage.test.js  LocaleChanger.test.js  MetadataFields.test.js  Pages.test.js  ProgressSpinner.test.js  README.md  ResultsBibliography.test.js  ResultsSummary.test.js  SearchArguments.test.js  SearchForm.test.js  SearchTips.test.js  TableOfContents.test.js  TextNavigation.test.js  TimeSeries.test.js  WordCloud.test.js  helpers.js  mixins.test.js  store.test.js  utils.test.js
docs/: README.md  _config.yml  access_control.md  configure_web_app.md  database_loading.md  encoding_spec.md  index.md  installation.md  query_syntax.md
docs/_includes/: foot.html  head.html
docs/specific_installations/: macos_installation.md  redhat_installation.md  ubuntu_installation.md
extras/: artfl_theme.scss  load_config.py  migrate.py  vf_theme.scss
python/: pyproject.toml  setup.py
python/philologic/: Config.py  TagCensus.py  shlax.py  shlaxtree.py
python/philologic/loadtime/: LoadFilters.py  LoadOptions.py  Loader.py  OHCOVector.py  Parser.py  PhiloLoad.py  PlainTextParser.py  PostFilters.py  __main__.py
python/philologic/runtime/: DB.py  FragmentParser.py  HitList.py  HitWrapper.py  MetadataQuery.py  ObjectFormatter.py  Query.py  QuerySyntax.py  WSGIHandler.py  __init__.py  _search_worker.py  access_control.py  citations.py  collocation_scores.py  exceptions.py  find_similar_words.py  get_text.py  link.py  multi_word_search.py  pages.py  sql_validation.py  term_expansion.py  web_config.py
python/philologic/runtime/reports/: __init__.py  aggregation.py  bibliography.py  collocation.py  concordance.py  frequency.py  generate_word_frequency.py  kwic.py  landing_page.py  navigation.py  table_of_contents.py  time_series.py
python/philologic/utils/: __init__.py  convert_entities.py  line_count.py  load_module.py  metadata_type_handler.py  pretty_print.py  sort.py  update_python_executable.py  upgrade_gunicorn_conf.py
python/scripts/: philoload5
tests/: README.md  conftest.py  pytest.ini
tests/benchmarks/: __init__.py  baseline.json  test_performance.py
tests/fixtures/: __init__.py  corpus_configs.py  corpus_manager.py
tests/integration/: __init__.py  test_loader_pipeline.py  test_metadata_filtering.py  test_query_methods.py
tests/load_configs/: __init__.py  eltec_config.py  shakespeare_config.py
tests/regression/: __init__.py  test_gold_sets.py
tests/tools/: __init__.py  generate_gold_sets.py  update_perf_baseline.py
www/: .htaccess  app.py  custom_functions_loader.py  dispatcher.py  gunicorn.conf.defaults.py  gunicorn.conf.py  middleware.py  webApp.py  wsgi_helpers.py
(+225 files in other folders)
