[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "philologic"
version = "5.1.0"
authors = [
    { name = "Clovis Gladstone", email = "clovisgladstone@artfl.uchicago.edu" },
]
license = "GPL-3.0-or-later"
description = "A concordance search engine for TEI-XML"
readme = "README"
urls = { Homepage = "https://github.com/ARTFL-Project/PhiloLogic5" }

requires-python = ">=3.11"
dependencies = [
    "regex",
    "lxml",
    "python-levenshtein",
    "natsort",
    "multiprocess",
    "tqdm",
    "orjson",
    "black",
    "msgspec",
    "unidecode",
    "lz4",
    "lmdb",
    "numpy~=2.2",
    "numba~=0.61",
    "scikit-learn~=1.4",
    "pandas~=2.2",
    "spacy~=3.8",
    "netaddr",
]

[project.optional-dependencies]
transformers = ["spacy-transformers~=1.3.8"]

[tool.setuptools]
packages = [
    "philologic",
    "philologic.runtime",
    "philologic.utils",
    "philologic.runtime.reports",
    "philologic.loadtime",
]
